--- a/views/admin/pages/account/account.view.ejs
+++ b/views/admin/pages/account/account.view.ejs
@@ -20,9 +20,11 @@
     <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
     <link rel="stylesheet" href="/admin/styles/partials/header.css" />
     <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/footer.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
+
     <div class="body">
       <%-include("../../partials/sider.view.ejs") %>
       <div class="main">
@@ -197,6 +199,8 @@
         <% } %>
       </div>
     </div>
+
+    <%-include("../../partials/footer.view.ejs") %>
 
     <form
       action="<%= prefixAdmin %>/accounts"
