--- a/views/admin/pages/product/create.view.ejs
+++ b/views/admin/pages/product/create.view.ejs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
     <link rel="stylesheet" href="/admin/styles/partials/header.css" />
     <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/footer.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -208,8 +209,12 @@
               <div class="col-12">
                 <div class="form-group mb-4">
                   <div class="image-box">
-                    <i class="bi bi-x-lg float-end mb-2 image-delete"></i>
-                    <img src="" alt="Hiển thị hình ảnh sản phẩm" class="image-upload" />
+                    <div class="mb-4 d-flex jutify-content-end w-100 image-delete-box">
+                      <i class="bi bi-x-lg float-end mb-2 image-delete"></i>
+                    </div>
+                    <div class="d-flex justify-content-center image-upload-box">
+                      <img src="" alt="Hiển thị hình ảnh sản phẩm" class="image-upload" />
+                    </div>
                   </div>
                   <label for="thumbnail" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Ảnh (.png / .jpg)</label
@@ -284,6 +289,8 @@
         <% } %>
       </div>
     </div>
+
+    <%-include("../../partials/footer.view.ejs") %>
 
     <!-- Script File -->
     <script src="/admin/scripts/sidebarToggle.js"></script>
