--- a/views/admin/partials/changeMulti.view.ejs
+++ b/views/admin/partials/changeMulti.view.ejs
@@ -35,6 +35,6 @@
     <div class="form-group me-1 d-none">
       <input type="text" name="ids" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary"><i class="bi bi-funnel me-1"></i>Áp dụng</button>
+    <button type="submit" class="btn btn-primary"><i class="bi bi-funnel"></i></button>
   </div>
 </form>
