--- a/views/admin/partials/sort.view.ejs
+++ b/views/admin/partials/sort.view.ejs
@@ -9,6 +9,6 @@
     <option class="sort-option" value="title-desc" <% if(sortValue === "title-desc") {%>selected<% } %>>Tiên đề Z - A z🇦</option>
   </select>
   <button type="submit" class="btn btn-primary ms-1 sort-clear">
-    <i class="bi bi-eraser me-2"></i>Xóa
+    <i class="bi bi-eraser"></i>
   </button>
 </form>
