--- a/public/admin/setup.css
+++ b/public/admin/setup.css
@@ -11,14 +11,14 @@
 .body {
   display: flex;
   height: 100%;
+  margin-bottom: 60px;
 }
 
 .body .main {
   padding: 20px;
   width: 100%;
-  height: 100vh;
-  overflow-y: scroll;
   margin-left: 225px;
+  margin-top: 70px;
 }
 
 @media (max-width: 992px) {
@@ -34,7 +34,7 @@
   --dark-primary-color-admin: rgb(208, 159, 24);
 
   --secondary-color-admin: #2484bb;
-  --light-secondary-color-admin: ;
+  --light-secondary-color-admin: #4ea6d8;
   --dark-secondary-color-admin: ;
 
   --dark-gray-color-admin: rgb(49, 49, 49);
@@ -96,10 +96,26 @@
 
 /* Setup scrollbar */
 ::-webkit-scrollbar {
-  display: none;
+  width: 10px;
+  background: var(--light-gray-color-admin);
+}
+::-webkit-scrollbar-thumb {
+  background: var(--light-secondary-color-admin);
+  border-radius: 10px;
+  cursor: pointer;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primary-color-admin);
+  transition: 0.4s ease;
 }
 
 /* Setup bootstrap */
+@media screen and (min-width: 992px) {
+  .col-lg-5-custom {
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+}
 .btn-primary {
   background-color: var(--secondary-color-admin);
   border-color: var(--secondary-color-admin);
@@ -249,15 +265,35 @@
 .icon-font {
   font-size: var(--icon-font-size);
 }
+
 .image-box {
-  width: 300px;
   margin: auto;
   padding: 10px;
   border: 1px solid var(--secondary-color-admin);
   border-radius: 10px;
   box-sizing: content-box;
 }
-.image-box .image-upload {
-  width: 300px;
-  height: auto;
+.image-box .image-upload-box {
+  display: flex;
+  justify-content: center;
+}
+.image-box .image-upload-box .image-upload {
+  padding: 5px;
+  border: 1px solid var(--light-gray-color-admin);
+  max-width: 100%;
+  height: 300px;
+  object-fit: contain;
+  object-position: center;
+}
+.image-box .image-delete-box {
+  display: flex;
+  justify-content: flex-end;
+}
+.image-box .image-delete-box .image-delete {
+  color: var(--secondary-color-admin);
+  cursor: pointer;
+}
+
+textarea {
+  min-height: 150px !important;
 }
