--- a/public/admin/styles/partials/sider.css
+++ b/public/admin/styles/partials/sider.css
@@ -3,6 +3,7 @@
   top: 0;
   height: 100vh;
   z-index: 1030;
+  margin-top: 70px;
 }
 
 #sidebar-layout #sidebar-nav-box {
@@ -10,11 +11,6 @@
   right: 0;
   left: 0;
   z-index: 1030;
-}
-#sidebar-layout #sidebar-nav-box {
-  width: 180px;
-  height: 100vh;
-  z-index: 1038;
 }
 #sidebar-layout #sidebar-nav-box .sb-sidenav .sb-sidenav-menu {
   overflow-y: auto;
@@ -33,6 +29,10 @@
 
 #sidebar-layout #sidebar-nav-box {
   transform: translateX(0);
+}
+
+#sidebar-layout #sidebar-nav-box #sidebar-nav-accordion {
+  height: 100%;
 }
 
 #sidebar-layout .sidebar-nav-link:hover {
@@ -68,7 +68,7 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 1037;
     display: none;
   }
@@ -79,6 +79,6 @@
 }
 #sidebar-layout #sidebar-nav-box {
   width: 225px;
-  height: 100%;
+  height: 100vh;
   z-index: 1038;
 }
