--- a/views/admin/pages/account/create.view.ejs
+++ b/views/admin/pages/account/create.view.ejs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
     <link rel="stylesheet" href="/admin/styles/partials/header.css" />
     <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/footer.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -75,8 +76,12 @@
               </div>
               <div class="col-12">
                 <div class="image-box mb-4">
-                  <i class="bi bi-x-lg float-end mb-2 image-delete"></i>
-                  <img src="" alt="Hiển thị hình ảnh đại diện" class="image-upload" />
+                  <div class="mb-4 d-flex jutify-content-end w-100 image-delete-box">
+                    <i class="bi bi-x-lg float-end mb-2 image-delete"></i>
+                  </div>
+                  <div class="d-flex justify-content-center image-upload-box">
+                    <img src="" alt="Hiển thị hình ảnh đại diện" class="image-upload" />
+                  </div>
                 </div>
               </div>
               <div class="col-6">
@@ -143,6 +148,8 @@
         <% } %> <% } %>
       </div>
     </div>
+
+    <%-include('../../partials/footer.view.ejs') %>
 
     <!-- Script File -->
     <script src="/admin/scripts/showAlert.js"></script>
