--- a/views/admin/pages/product/detail.view.ejs
+++ b/views/admin/pages/product/detail.view.ejs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
     <link rel="stylesheet" href="/admin/styles/partials/header.css" />
     <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/footer.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -177,6 +178,8 @@
         <% } %>
       </div>
     </div>
+
+    <% include('../../partials/footer.view.ejs') %>
 
     <form
       action="<%= prefixAdmin %>/products"
