--- a/views/admin/pages/profile/profile.view.ejs
+++ b/views/admin/pages/profile/profile.view.ejs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
     <link rel="stylesheet" href="/admin/styles/partials/header.css" />
     <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/footer.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -73,6 +74,8 @@
         </div>
       </div>
     </div>
+
+    <%-include("../../partials/footer.view.ejs") %>
 
     <!-- Script File -->
     <script src="/admin/scripts/showAlert.js"></script>
