complete setting for web client feature

--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -25,7 +25,7 @@
       <div class="col-lg-2 col-12 header-logo mt-2">
         <a href="/" class="header-logo-link"
           ><img
-            src="/client/images/logo.png"
+            src="<%= clientWebsite ? clientWebsite.logo : '' %>"
             alt="logo"
             width="115px"
             class="pb-2 pt-1 mt-1 header-logo-img"
