--- a/views/client/partials/seo-meta.view.ejs
+++ b/views/client/partials/seo-meta.view.ejs
@@ -3,4 +3,4 @@
 <meta name="description" content="<%= generalWebsite ? generalWebsite.seoMetaDescription : '' %>" />
 <meta name="keywords" content="<%= generalWebsite ? generalWebsite.seoMetaKeyword : '' %>" />
 <title><%= generalWebsite ? generalWebsite.name : '' %> - <%= pageTitle %></title>
-<link rel="icon" type="image/x-icon" href="/client/images/VENZA_LOGO_FAVICON.png" />
+<link rel="icon" type="image/x-icon" href="<%= clientWebsite ? clientWebsite.favicon : '' %>" />
