--- a/public/client/styles/partials/header.css
+++ b/public/client/styles/partials/header.css
@@ -248,39 +248,43 @@
   color: var(--dark-gray-color);
   transition: 0.4s ease-out;
 }
-.navheader .navheader-menu .navheader-menu-list .navheader-menu-item .navheader-list-dropdown {
-  width: 200px;
-  padding-left: unset;
+.navheader .navheader-list-dropdown.level-1 {
+  margin-top: 0;
+  padding-left: 0px;
   position: absolute;
-  top: 70px;
-  left: 50%;
-  background: var(--dark-gray-color);
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.214);
-  opacity: 0;
-  z-index: 1000;
-  visibility: hidden;
-}
-.navheader
-  .navheader-menu
-  .navheader-menu-list
-  .navheader-menu-item
-  .navheader-list-dropdown
-  .navheader-menu-item {
-  border-bottom: 1px solid var(--light-gray-color);
-}
-.navheader
-  .navheader-menu
-  .navheader-menu-list
-  .navheader-menu-item:hover
-  .navheader-list-dropdown {
   top: 50px;
+  left: 0;
+  width: 200px;
+  background: var(--dark-gray-color);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  z-index: 1000;
+}
+.navheader .navheader-menu-item:hover > .navheader-list-dropdown.level-1 {
   opacity: 1;
   visibility: visible;
-  transition: 0.4s ease-out;
 }
-/* .navheader .navheader-menu .navheader-menu-list .navheader-menu-item {
-  border-bottom: 1px solid var(--light-gray-color);
-} */
+.navheader .navheader-list-dropdown.level-2,
+.navheader .navheader-list-dropdown.level-3,
+.navheader .navheader-list-dropdown.level-4 {
+  padding-left: 0px;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 200px;
+  background: var(--dark-gray-color);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  z-index: 1000;
+}
+.navheader .navheader-menu-item:hover > .navheader-list-dropdown.level-2,
+.navheader .navheader-menu-item:hover > .navheader-list-dropdown.level-3,
+.navheader .navheader-menu-item:hover > .navheader-list-dropdown.level-4 {
+  opacity: 1;
+  visibility: visible;
+}
 .navheader .navheader-menu .navheader-menu-list .navheader-menu-item .navheader-menu-link {
   padding: 13px 20px;
   display: block;
