--- a/views/client/partials/selecttree.view.ejs
+++ b/views/client/partials/selecttree.view.ejs
@@ -1,4 +1,4 @@
-<ul class="navheader-list-dropdown">
+<ul class="navheader-list-dropdown level-<%= level %>">
   <% categoryListTree.forEach(category => { %>
   <li class="navheader-menu-item">
     <a href="/products?category=<%= category.slug %> " class="navheader-menu-link nav-link"
